> [FILE:complete_check.py] Fixed bug related to choose the option --graphml-output
> [FILE:write_graphml_output.py] Added the data token atributes to graphml
> [FILE:check_safety_memory_FORTES.c] Updated the functions in LIB to handle with type of the var
                ::Updated the function PRINT_TRACE_LOG to read from file tmp log
                    - Updated the header
                ::HIP2 (DONE): Write each action in the map list in a tmp file
> [FILE:write_new_instance.py] Added in the map list the var name to give as input to LIB
> [FILE:create_map.py] When tokenizer the program we not consider blank lines
> [FILE: configure.py] Added networkx in the install process
> [FILE: configure.py] Added c-tokenizer-x86_64-linux.zip in the install process
> [FILE:check_safety_memory_FORTES.c] Executes os.remove("/tmp/tmp_map_currentlog.tmp") in the C library to avoid troubles with multiples executions
> [FILE:write_graphml_output.py] Set the graphml attributes according to SVCOMP model



> [FILE:write_graphml_output.py] Updated the graphml attribute, now only entry attribute is a string otherwise is like this "id0"
> [FILE:write_graphml_output.py] Added support to functions (enterFunction) in graphml




> [FILE:write_graphml_output.py] TODO: Update the assumption attribute to correct form

> [FILE:write_graphml_output.py] TODO: Validate the assumption write in case of pointer and arrays

> [FILE:write_graphml_output.py] TODO: Validate the assumption write in case of arrays
    ::BUG-ARRAY to print the array values from memory address




> [FILE:create_map.py] TODO: in the complete trace add the loop assignment, such as: i++



TO test with CPAChecker:

$ scripts/cpa.sh -64 -explicitAnalysis-NoRefiner -setprop analysis.checkCounterexamples=false -setprop cpa.value.merge=SEP -setprop cfa.useMultiEdges=false -setprop parser.transformTokensToLines=true -spec witness_format/example0.graphml -spec PropertyERROR.prp witness_format/example0.c





