@@ -1,0 +1,91 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?> 
+<graphml xmlns="http://graphml.graphdrawing.org/xmlns" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://graphml.graphdrawing.org/xmlns http://graphml.graphdrawing.org/xmlns/1.0/graphml.xsd">
+  <key attr.name="tokenSet" attr.type="string" for="edge" id="d7" />
+  <key attr.name="sourcecode" attr.type="string" for="edge" id="d6" />
+  <key attr.name="originFileName" attr.type="string" for="edge" id="d5" />
+  <key attr.name="originTokenSet" attr.type="string" for="edge" id="d4" />
+  <key attr.name="lineNumberInOrigin" attr.type="string" for="edge" id="d3" />
+  <key attr.name="isViolationNode" attr.type="boolean" for="node" id="d2" />
+  <key attr.name="isEntryNode" attr.type="string" for="node" id="entry" />
+  <key attr.name="sourcecodeLanguage" attr.type="string" for="graph" id="d0" />
+  <graph edgedefault="directed">
+    <data key="d0">C</data>
+    <node id="N0">
+      <data key="entry">True</data>
+    </node>
+    <node id="N1" />
+    <node id="N2" />
+    <node id="N3" />
+    <node id="N4" />
+    <node id="N5">
+      <data key="d2">True</data>
+    </node>
+    <edge source="N0" target="N1">
+      <data key="d3">6</data>
+      <data key="d4">19, 21, 23, 25</data>
+      <data key="d5">/home/hrocha/Documents/Projects_DEV/map2check_git/Map2Check-Fortes/code_samples/witness_format/false_free_2.c</data>
+      <data key="d6">int
+*
+A
+=
+malloc
+(
+10
+)
+;
+</data>
+      <data key="d7">19, 21, 23, 25</data>
+    </edge>
+    <edge source="N1" target="N2">
+      <data key="d3">7</data>
+      <data key="d4">28, 30, 32, 34</data>
+      <data key="d5">/home/hrocha/Documents/Projects_DEV/map2check_git/Map2Check-Fortes/code_samples/witness_format/false_free_2.c</data>
+      <data key="d6">int
+*
+B
+=
+malloc
+(
+10
+)
+;
+</data>
+      <data key="d7">28, 30, 32, 34</data>
+    </edge>
+    <edge source="N2" target="N3">
+      <data key="d3">9</data>
+      <data key="d4">37, 39</data>
+      <data key="d5">/home/hrocha/Documents/Projects_DEV/map2check_git/Map2Check-Fortes/code_samples/witness_format/false_free_2.c</data>
+      <data key="d6">B
+=
+A
+;
+</data>
+      <data key="d7">37, 39</data>
+    </edge>
+    <edge source="N3" target="N4">
+      <data key="d3">11</data>
+      <data key="d4">41, 43</data>
+      <data key="d5">/home/hrocha/Documents/Projects_DEV/map2check_git/Map2Check-Fortes/code_samples/witness_format/false_free_2.c</data>
+      <data key="d6">free
+(
+A
+)
+;
+</data>
+      <data key="d7">41, 43</data>
+    </edge>
+    <edge source="N4" target="N5">
+      <data key="d3">12</data>
+      <data key="d4">46, 48</data>
+      <data key="d5">/home/hrocha/Documents/Projects_DEV/map2check_git/Map2Check-Fortes/code_samples/witness_format/false_free_2.c</data>
+      <data key="d6">free
+(
+B
+)
+;
+</data>
+      <data key="d7">46, 48</data>
+    </edge>
+  </graph>
+</graphml>
